FIX text-align center

--- a/css/srtile.less
+++ b/css/srtile.less
@@ -239,6 +239,7 @@
 	// Horizontal align center
 	[data-horizontal_align="2"] {
 	  justify-content: center;
+	  text-align: center;
 	}
 
 	// Horizontal align right
